--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body{
         display: inline;
         padding: 10px;
         text-decoration: none;
-        color:#23d5ab;
+        color:#009B89;
     }
     #menu1{
         float:left;
